--- a/requirements.txt
+++ b/requirements.txt
@@ -2,5 +2,7 @@ asgiref==3.6.0
 autopep8==2.0.1
 Django==4.1.7
 mysqlclient==2.1.1
+py3dns==3.2.1
 pycodestyle==2.10.0
 sqlparse==0.4.3
+validate-email-address==1
