--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ autopep8==2.0.1
 Django==4.1.7
 django-money==3.0.0
 django-phonenumber-field==7.0.2
+djangorestframework==3.14.0
 phonenumbers==8.13.10
 phonenumberslite==8.13.10
 pillow==9.5.0
